# clion_link_mysql

./: AuthorManager.cpp  AuthorManager.h  CMakeLists.txt  README.md  main.cpp
